  channels (not used yet, but serves as a padding at least.) added an
  uint16 reserved padding member just after buffer_size.

* malloc-safe: upon memory allocation failures, the library either does
  a mid_exit() to free all the allocated memory during init time, or a
  mid_song_free() to free the allocated memory during a song load time.

* mid_init(), mid_init_no_config(): a mid_exit() is guaranteed upon
  config file parse failures or malloc() failures. 

* mid_init(): the library doesn't care about common timidity.cfg system
  locations any more, callers of mid_init() are responsible for it. if
  the config file argument to mid_init() contains a parent directory,
  that will be added to timidity search path.

* mid_exit(): does a proper cleanup now and a reinitialization of the
  library doesn't crash.

* multiple resampling fixes. several timidity-0.2i fixes from the
  onicos.com site (http://www.onicos.com/staff/iz/timidity/dist/),
  as well as a few bits from timidity++. several fixes for memory
  errors reported by valgrind.

* mid_istream_skip(): accepts a long type length instead of size_t
  and returns success or failure now.

* options.h (DEFAULT_DRUMCHANNELS): do not mark 16 as a drum channel.

* read_midi_file(): added support for Microsoft RMID format.

* read_midi_file(): fixed parsing of certain MIDI files with extra
  data at the end of the tracks. (SDL_mixer bug:
  http://bugzilla.libsdl.org/show_bug.cgi?id=1299)

* read_config_file(): honor the return code from a recursive call.

* mid_get_version(): new function to retrieve library version.

* DLS instruments support: made it a config time option, disabled by
  default, because the code isn't good enough, neither is it used in
  unix installations where timidity is normally needed.

* DLS: a few changes from vavoom svn repository to fix loading of drums
  and somewhat improve the dls instruments use. still not good enough.

* renamed macro FSCALE to TIM_FSCALE to avoid possible clashes with