@@ -71,8 +71,7 @@ FILE *open_file(const char *name)
     PathList *plp = pathlist;
     int l;
 
-    while (plp)  /* Try along the path then */
-      {
+    while (plp) { /* Try along the path then */
 	*current_filename = 0;
 	l = strlen(plp->path);
 	if(l)
@@ -89,7 +88,7 @@ FILE *open_file(const char *name)
 	if ((fp = fopen(current_filename, OPEN_MODE)))
 	  return fp;
 	plp = plp->next;
-      }
+    }
   }
 
   /* Nothing could be opened. */
@@ -97,10 +96,10 @@ FILE *open_file(const char *name)
   return NULL;
 }
 
-/* This'll allocate memory and clear it. */
-void *safe_malloc(size_t count)
+/* This allocates memory and clears it. */
+void *timi_calloc(size_t count)
 {
-  void *p = malloc(count);
+  void *p = timi_malloc(count);
   if (p == NULL) {
     DEBUG_MSG("malloc() failed for %lu bytes.\n", (unsigned long)count);
     return NULL;
@@ -112,11 +111,11 @@ void *safe_malloc(size_t count)
 /* This adds a directory to the path list */
 int add_to_pathlist(const char *s, size_t l)
 {
-  PathList *plp = (PathList *) safe_malloc(sizeof(PathList));
+  PathList *plp = (PathList *) timi_malloc(sizeof(PathList));
   if (!plp) return -2;
-  plp->path = (char *) safe_malloc(l + 1);
+  plp->path = (char *) timi_malloc(l + 1);
   if (!plp->path) {
-    free (plp);
+    timi_free (plp);
     return -2;
   }
   plp->next = pathlist;
@@ -130,11 +129,10 @@ void free_pathlist(void)
     PathList *plp = pathlist;
     PathList *next;
 
-    while (plp)
-    {
+    while (plp) {
 	next = plp->next;
-	safe_free(plp->path);
-	free(plp);
+	timi_free(plp->path);
+	timi_free(plp);
 	plp = next;
     }
     pathlist = NULL;
