@@ -73,7 +73,7 @@ static int read_meta_data(MidIStream *stream, MidSong *song, sint32 len, uint8 t
 #endif
 
   MidSongMetaId id;
-  char *s = (char *)safe_malloc(len+1);
+  char *s = (char *)timi_calloc(len+1);
 
   if (!s)
     {
@@ -82,7 +82,7 @@ static int read_meta_data(MidIStream *stream, MidSong *song, sint32 len, uint8 t
     }
   if (len != (sint32) mid_istream_read(stream, s, 1, len))
     {
-      safe_free(s);
+      timi_free(s);
       return -1;
     }
 
@@ -99,15 +99,15 @@ static int read_meta_data(MidIStream *stream, MidSong *song, sint32 len, uint8 t
     case 2: id = MID_SONG_COPYRIGHT; break;
   /* others not stored in song
      but debug-printed above */
-    default: safe_free(s); return 0;
+    default: timi_free(s); return 0;
   }
-  safe_free(song->meta_data[id]);
+  timi_free(song->meta_data[id]);
   song->meta_data[id] = s;
   return 0;
 }
 
 #define MIDIEVENT(at,t,ch,pa,pb)				\
-  newlist = (MidEventList *) safe_malloc(sizeof(MidEventList));	\
+  newlist = (MidEventList *) timi_calloc(sizeof(MidEventList));	\
   if (!newlist) { song->oom = 1;				\
    return NULL; }						\
   newlist->event.time = at;					\
@@ -116,7 +116,7 @@ static int read_meta_data(MidIStream *stream, MidSong *song, sint32 len, uint8 t
   newlist->event.a = pa;					\
   newlist->event.b = pb;					\
   return newlist;
-/*newlist->next = NULL;*/	/* safe_malloc() clears mem already */
+/*newlist->next = NULL;*/	/* timi_calloc() clears mem already */
 
 #define MAGIC_EOT ((MidEventList *)(-1))
 
@@ -367,7 +367,7 @@ static void free_midi_list(MidSong *song)
   while (meep)
     {
       next=meep->next;
-      free(meep);
+      timi_free(meep);
       meep=next;
     }
   song->evlist = NULL;
@@ -403,7 +403,7 @@ static MidEvent *groom_list(MidSong *song, sint32 divisions,sint32 *eventsp,
   counting_time=2; /* We strip any silence before the first NOTE ON. */
 
   /* This may allocate a bit more than we need */
-  groomed_list=lp=(MidEvent *) safe_malloc(sizeof(MidEvent) * (song->event_count+1));
+  groomed_list=lp=(MidEvent *) timi_calloc(sizeof(MidEvent) * (song->event_count+1));
   if (!groomed_list) {
     song->oom=1;
     free_midi_list(song);
@@ -599,14 +599,14 @@ MidEvent *read_midi_file(MidIStream *stream, MidSong *song, sint32 *count, sint3
 	  format, tracks, divisions);
 
   /* Put a do-nothing event first in the list for easier processing */
-  song->evlist=(MidEventList *) safe_malloc(sizeof(MidEventList));
+  song->evlist=(MidEventList *) timi_calloc(sizeof(MidEventList));
   if (!song->evlist) {
     song->oom=1;
     return NULL;
   }
   song->evlist->event.type=ME_NONE;
 /*song->evlist->event.time=0;
-  song->evlist->next = NULL;*/	/* safe_malloc() clears mem already */
+  song->evlist->next = NULL;*/	/* timi_calloc() clears mem already */
   song->event_count++;
 
   switch(format)
