@@ -68,7 +68,7 @@ stdio_istream_close (void *ctx)
   int ret = 0;
   if (((StdIOContext *) ctx)->autoclose)
     ret = fclose (((StdIOContext *) ctx)->fp);
-  free (ctx);
+  timi_free (ctx);
   return ret;
 }
 
@@ -141,7 +141,7 @@ mem_istream_close (void *ctx)
 {
   if (((MemContext *) ctx)->autofree)
     free (((MemContext *) ctx)->base);
-  free (ctx);
+  timi_free (ctx);
   return 0;
 }
 
@@ -151,14 +151,14 @@ mid_istream_open_fp (FILE * fp, int autoclose)
   StdIOContext *ctx;
   MidIStream *stream;
 
-  stream = (MidIStream *) malloc(sizeof(MidIStream));
+  stream = (MidIStream *) timi_malloc(sizeof(MidIStream));
   if (stream == NULL)
     return NULL;
 
-  ctx = (StdIOContext *) malloc(sizeof(StdIOContext));
+  ctx = (StdIOContext *) timi_malloc(sizeof(StdIOContext));
   if (ctx == NULL)
     {
-      free (stream);
+      timi_free (stream);
       return NULL;
     }
   ctx->fp = fp;
@@ -191,14 +191,14 @@ mid_istream_open_mem (void *mem, size_t size, int autofree)
   MemContext *ctx;
   MidIStream *stream;
 
-  stream = (MidIStream *) malloc(sizeof(MidIStream));
+  stream = (MidIStream *) timi_malloc(sizeof(MidIStream));
   if (stream == NULL)
     return NULL;
 
-  ctx = (MemContext *) malloc(sizeof(MemContext));
+  ctx = (MemContext *) timi_malloc(sizeof(MemContext));
   if (ctx == NULL)
     {
-      free (stream);
+      timi_free (stream);
       return NULL;
     }
   ctx->base = (sint8 *) mem;
@@ -223,7 +223,7 @@ mid_istream_open_callbacks (MidIStreamReadFunc read,
 {
   MidIStream *stream;
 
-  stream = (MidIStream *) malloc(sizeof(MidIStream));
+  stream = (MidIStream *) timi_malloc(sizeof(MidIStream));
   if (stream == NULL)
     return NULL;
 
@@ -266,6 +266,6 @@ int
 mid_istream_close (MidIStream * stream)
 {
   int ret = stream->close (stream->ctx);
-  free (stream);
+  timi_free (stream);
   return ret;
 }
